@@ -634,7 +634,7 @@
       </para>
      </listitem>
      <listitem>
-      <para>Click <guibutton>Add package</guibutton> to bring up package selection dialog.</para>
+      <para>Click <guibutton>Add Package</guibutton> to bring up package selection dialog.</para>
      </listitem>
      <listitem>
       <para>Select the package to add and click <guibutton>Add</guibutton>.</para>
@@ -832,7 +832,7 @@
      <menuchoice><guisubmenu>Build</guisubmenu><guimenuitem>Build</guimenuitem></menuchoice> 
 	 will build all of the files in the <filename class="directory">src</filename> (source) 
 	 directory, and generate the executable. <menuchoice><guisubmenu>Build</guisubmenu>
-	 <guimenuitem>Build All</guimenuitem></menuchoice> will build 
+	 <guimenuitem>Build Project</guimenuitem></menuchoice> will build 
 	 the whole project &mdash; all of the subdirectories (including 
 	 <filename class="directory">src</filename>), are built recursively.
     </para>
@@ -869,13 +869,13 @@
     <para>
      To run the <filename>configure</filename> script found in the top level project directory, 
 	 choose the menu item <menuchoice><guisubmenu>Build</guisubmenu>
-	 <guimenuitem>Configure</guimenuitem></menuchoice>. The script will determine the system
+	 <guimenuitem>Run Configure&hellip;</guimenuitem></menuchoice>. The script will determine the system
      configuration and create some of the files required to perform a build (such as 
 	 <filename>Makefile</filename> and <filename>config.h</filename>). This is necessary because 
 	 the application may depend on specific configuration of some of these options.
 	</para> 
 	<important>
-	 <title>When to configure</title>
+	 <title>When to run configure</title>
 	<para>
      Until you run <filename>configure</filename>, you cannot start building the 
 	 project.
@@ -891,7 +891,7 @@
     </para>
     <para>
      You can also supply additional options to the configuration script. After choosing the 
-	 <guimenuitem>Configure</guimenuitem> menu item, a dialog will appear to prompt for additional 
+	 <guimenuitem>Run Configure&hellip;</guimenuitem> menu item, a dialog will appear to prompt for additional 
 	 options.
     </para>
      <figure>
@@ -928,7 +928,7 @@
 	 lots of build files). 
 	</para>
 	<note>
-	<title>When to autogen.sh</title>
+	<title>When to run autogen.sh</title>
 	<para> 
 	 Unlike configuration, auto generation does not need to be run even 
 	 once &mdash; in fact, it does not need to be run at all! The option is available because it 
@@ -937,7 +937,7 @@
 	</note>
     <para>
      Choose the menu item <menuchoice><guisubmenu>Build</guisubmenu>
-	 <guimenuitem>Auto generate</guimenuitem></menuchoice> to auto generate the project.
+	 <guimenuitem>Run Autogenerate&hellip;</guimenuitem></menuchoice> to auto generate the project.
     </para>
     <para>
      Read the info pages of <ulink type="info" url="info:automake"><application>automake</application></ulink> 
@@ -949,7 +949,7 @@
     <title>Clean</title>
     <para>
      This option cleans the project and leaves it in a state that requires 
-	 <guimenuitem>Build All</guimenuitem> to be performed. It deletes all of the 
+	 <guimenuitem>Build Project</guimenuitem> to be performed. It deletes all of the 
 	 files generated by the build process, including all object files 
 	 (<filename>*.o</filename> files) and the executable(s) in the 
 	 <filename class="directory">src</filename> directory (and other directories). 
@@ -960,12 +960,12 @@
     </para>
    </sect2>
    <sect2 id="build-cleanall">
-    <title>Clean All</title>
+    <title>Clean Project</title>
     <para>
-     There is not a great deal to say about <guimenuitem>Clean All</guimenuitem> (which might 
+     There is not a great deal to say about <guimenuitem>Clean Project</guimenuitem> (which might 
 	 also be called <emphasis>Clean distribution</emphasis>, or <emphasis>clean dist</emphasis> 
 	 for short). It cleans the project and leaves it in a state that requires 
-	 <guimenuitem>Configure</guimenuitem> and <guimenuitem>Build All</guimenuitem> to be 
+	 <guimenuitem>Run Configure&hellip;</guimenuitem> and <guimenuitem>Build Project</guimenuitem> to be 
 	 performed. It deletes all of the files generated by the build processes, including all the
      object files (<filename>*.o</filename> files), executable(s) and Makefiles. In other 
 	 words, it leaves the project as though it has just been extracted from a distribution 
@@ -973,7 +973,7 @@
     </para>
     <para>
      Choose the menu item <menuchoice><guisubmenu>Build</guisubmenu>
-	 <guimenuitem>Clean All</guimenuitem></menuchoice> to completely clean the project.
+	 <guimenuitem>Clean Project</guimenuitem></menuchoice> to completely clean the project.
     </para>
    </sect2>
   </sect1>
